--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Build
 on:
-  push:
-    branches: [main]
+  pull_request:
+    types: [edited, opened, reopened, synchronize]
 
 jobs:
   build:
