--- a/package.json
+++ b/package.json
@@ -32,5 +32,7 @@
   "dependencies": {
     "change-case": "^4.1.1"
   },
-  "engines": { "node": ">=12.x" }
+  "engines": {
+    "node": ">=12.x"
+  }
 }
