--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,2 +1,13 @@
-yarnPath: ".yarn/releases/yarn-berry.cjs"
 nodeLinker: node-modules
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+    spec: "@yarnpkg/plugin-interactive-tools"
+  - path: .yarn/plugins/@yarnpkg/plugin-stage.cjs
+    spec: "@yarnpkg/plugin-stage"
+  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
+    spec: "@yarnpkg/plugin-typescript"
+  - path: .yarn/plugins/@yarnpkg/plugin-engines.cjs
+    spec: "https://raw.githubusercontent.com/devoto13/yarn-plugin-engines/main/bundles/%40yarnpkg/plugin-engines.js"
+
+yarnPath: .yarn/releases/yarn-berry.cjs
